Fixing path for documentation file

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Shortcuts: <a href="cgitraces.cgi"> ADC traces </a>,
 	 <p> For other web operations (login required), <a href="webops/webopsindex.html"> click here </a>
 
 	<h2> Help </h2>
-	<p> View Pixie-Net <a href="Pixie_Net_Manual.pdf"> manual </a>  </p>
+	<p> View Pixie-Net <a href="doc/Pixie_Net_Manual.pdf"> manual </a>  </p>
 	<p> XIA support website for <a href="http://support.xia.com/default.asp?W772"> Pixie-Net </a> </p>
 </div>
 </body>
