--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 	<img src="Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
 <p> </p>
 <p> <h1> Pixie-Net Home Page</h1></p>
-Shortcuts: <a href="cgitraces.cgi"> ADC traces </a>, 
-           <a href="cgistats.cgi"> Run statistics </a>, 
+Shortcuts: <a href="cgi/cgitraces.cgi"> ADC traces </a>,
+           <a href="cgi/cgistats.cgi"> Run statistics </a>,
  			  <a href="webops/webopsindex.html"> Web operations </a> ,
 			  <a href="mcapage.html">MCA spectra</a>
 	 	   
@@ -53,15 +53,15 @@ Shortcuts: <a href="cgitraces.cgi"> ADC traces </a>,
    <p>To view most recent ADC traces in a plot,  <a href="adcpage.html"> click here</a>.</p>
 	<p>To view most recent averaged ADC traces in a plot,  <a href="adcavgpage.html"> click here</a>.</p>
 
-   <p>To view LM waveforms from latest 0x500 DAQ,  <a href="cgiwaveforms.cgi?evno=0"> click here</a>.</p>
+   <p>To view LM waveforms from latest 0x500 DAQ,  <a href="cgi/cgiwaveforms.cgi?evno=0"> click here</a>.</p>
 
 	
 	<h2> CGI Current Data </h2>
 	<p><b>When no other task is in progress</b>, view/refresh
     <ul>
-	    <li> <a href="cgitraces.cgi"> ADC traces </a> 	   </li>
-		  <li> <a href="cgiavgtraces.cgi"> Averaged ADC traces </a> 	   </li>
-       <li> <a href="cgistats.cgi"> Run statistics </a> (full) </li>		 
+	    <li> <a href="cgi/cgitraces.cgi"> ADC traces </a> 	   </li>
+		  <li> <a href="cgi/cgiavgtraces.cgi"> Averaged ADC traces </a> 	   </li>
+       <li> <a href="cgi/cgistats.cgi"> Run statistics </a> (full) </li>
 	 </ul></p>
 
 	 <p> For other web operations (login required), <a href="webops/webopsindex.html"> click here </a>
