--- a/lmtablepage.html
+++ b/lmtablepage.html
@@ -6,7 +6,7 @@
 <title>Pixie-Net Run Statistics</title>
 
 <!-- load the d3.js library -->    
-<script src="d3.v3.min.js"></script>
+<script src="js/d3.v3.min.js"></script>
 
 <style>
 	body { background-color:#d0d0d0; font-family:sans-serif; }
