--- a/psahistpage.html
+++ b/psahistpage.html
@@ -6,7 +6,7 @@
 <title>Pixie-Net PSA Histogram</title>
 
 <!-- Plotly.js -->
-  <script src="plotly-latest.min.js"></script>
+  <script src="js/plotly-latest.min.js"></script>
 
 <style type="text/css">
 	body { background-color:#d0d0d0; font-family:sans-serif; }
