--- a/adcpage.html
+++ b/adcpage.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Pixie-Net ADC</title>
 
-<script type="text/javascript"  src="js/dygraph-combined.js"></script>
+<script type="text/javascript"  src="../js/dygraph-combined.js"></script>
 
 <style type="text/css">
 	body { background-color:#d0d0d0; font-family:sans-serif; }
