--- a/adcavgpage.html
+++ b/adcavgpage.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Pixie-Net Triggered ADC</title>
 
-<script type="text/javascript"  src="js/dygraph-combined.js"></script>
+<script type="text/javascript"  src="../js/dygraph-combined.js"></script>
 
 <style type="text/css">
 	body { background-color:#d0d0d0; font-family:sans-serif; }
@@ -24,7 +24,7 @@
 
 <body>
  <div class="box">
-<img src="Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
+<img src="../Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
 <p> </p>
 <p> <h1> Pixie-Net ADC Triggered Traces </h1></p>
 
@@ -38,7 +38,7 @@
 
   var g2 = new Dygraph(
     document.getElementById("graphdiv2"),
-    "ADCAVG.csv", // path to CSV file
+    "../ADCAVG.csv", // path to CSV file
     {legend: 'always',
 	  title: ' ',
 	  ylabel: 'ADC value',
