Organizing html pages

--- a/html/adcavgpage.html
+++ b/html/adcavgpage.html
@@ -24,7 +24,7 @@
 
 <body>
  <div class="box">
-<img src="../Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
+<img src="../assets/Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
 <p> </p>
 <p> <h1> Pixie-Net ADC Triggered Traces </h1></p>
 
