--- a/html/lmtablepage.html
+++ b/html/lmtablepage.html
@@ -6,7 +6,7 @@
 <title>Pixie-Net Run Statistics</title>
 
 <!-- load the d3.js library -->    
-<script src="js/d3.v3.min.js"></script>
+<script src="../js/d3.v3.min.js"></script>
 
 <style>
 	body { background-color:#d0d0d0; font-family:sans-serif; }
@@ -46,7 +46,7 @@ td {
 
 <div class=box id="datatable">
 
-<img src="Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
+<img src="../assets/Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
 <p> </p>
 <p> <h1> Pixie-Net List Mode Table  </h1></p>
 <p> </p>
@@ -57,7 +57,7 @@ td {
 var rows = []
 var formatdate = d3.time.format("%b %d %Y");
 
-d3.csv("LMdata.dat", function(error, csv) {
+d3.csv("../LMdata.dat", function(error, csv) {
   csv.forEach(function(row) {
  //   row.mu = parseFloat(row.mu).toFixed(1);
  //   row.sigma = parseFloat(row.sigma).toFixed(1);
