--- a/html/mcapage.html
+++ b/html/mcapage.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Pixie-Net MCA</title>
 
-<script type="text/javascript"  src="js/dygraph-combined.js"></script>
+<script type="text/javascript"  src="../js/dygraph-combined.js"></script>
 
 <style type="text/css">
 	body { background-color:#d0d0d0; font-family:sans-serif; }
@@ -24,7 +24,7 @@
 
 <body>
  <div class="box">            
-<img src="Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
+<img src="../assets/Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
 <p> </p>
 <p> <h1> Pixie-Net MCA Spectrum </h1></p>
 
