--- a/html/psahistprojpage.html
+++ b/html/psahistprojpage.html
@@ -6,7 +6,7 @@
 <title>Pixie-Net PSA Histograms</title>
 
 <!-- Plotly.js -->
-  <script src="js/plotly-latest.min.js"></script>
+  <script src="../js/plotly-latest.min.js"></script>
 
 <style type="text/css">
 	body { background-color:#d0d0d0; font-family:sans-serif; }
@@ -25,7 +25,7 @@
 
 <body>
  <div class="box">            
-<img src="Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
+<img src="../assets/Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
 <p> </p>
 <p> <h1> Pixie-Net PSA histograms </h1></p>
 
@@ -73,7 +73,7 @@ var Nbins=100;
 
 
         		  
-Plotly.d3.csv('psa2D.csv', function(err, rows){
+Plotly.d3.csv('../psa2D.csv', function(err, rows){
 // "Plotly.d3.csv" must be a function defined in plotly
 // reading the csv file and executing a function on the data loaded into rows
 
