--- a/html/webops.html
+++ b/html/webops.html
@@ -20,13 +20,13 @@
 
 <body>
 <div class="box">
-	<img src="../Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
+	<img src="../assets/Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
 <p> </p>
 <p> <h1> Pixie-Net Web Operations</h1></p>
 Shortcuts: <a href="../cgi/cgitraces.cgi"> ADC traces </a>,
            <a href="../cgi/cgistats.cgi"> Run statistics </a>,
 			  <a href="../index.html"> Home page </a>,
-			  <a href="../mcapage.html">MCA spectra</a>
+			  <a href="mcapage.html">MCA spectra</a>
 
 
 	<h2> CGI Executables </h2>
@@ -61,10 +61,10 @@ Shortcuts: <a href="../cgi/cgitraces.cgi"> ADC traces </a>,
 	
    <p>View most recent data<b> in plots and tables</b> </p>
 	<ul>
-		<li> <a href="../mcapage.html">MCA spectra</a>
-	   <li> <a href="../rspage.html">Run status</a>
-		<li> PSA <a href="../psahistpage.html">histogram</a>, <a href="../psahistprojpage.html">with projections</a> or <a href="../psasurfacepage.html">surface</a> plot
-	   <li> <a href="../adcpage.html"> ADC traces</a>.
+		<li> <a href="mcapage.html">MCA spectra</a>
+	   <li> <a href="rspage.html">Run status</a>
+		<li> PSA <a href="psahistpage.html">histogram</a>, <a href="psahistprojpage.html">with projections</a> or <a href="psasurfacepage.html">surface</a> plot
+	   <li> <a href="adcpage.html"> ADC traces</a>.
 	</ul>
 	
 	
