--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 
 <body>
 <div class="box">
-	<img src="Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
+	<img src="assets/Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
 <p> </p>
 <p> <h1> Pixie-Net Home Page</h1></p>
 Shortcuts: <a href="cgi/cgitraces.cgi"> ADC traces </a>,
            <a href="cgi/cgistats.cgi"> Run statistics </a>,
  			  <a href="webops/webopsindex.html"> Web operations </a> ,
-			  <a href="mcapage.html">MCA spectra</a>
+			  <a href="html/mcapage.html">MCA spectra</a>
 	 	   
 	<h2>DAQ Monitoring</h2>
 	<p> <b>During</b> or after the data acquisition, view most recent
 	<ul>
-		<li> <a href="mcapage.html">MCA spectra</a>
-	   <li> <a href="rspage.html">Run status</a> (short) 
-		<li> PSA <a href="psahistpage.html">histogram</a>, <a href="psahistprojpage.html">with projections</a> or <a href="psasurfacepage.html">surface</a> plot</p>
+		<li> <a href="html/mcapage.html">MCA spectra</a>
+	   <li> <a href="html/rspage.html">Run status</a> (short)
+		<li> PSA <a href="html/psahistpage.html">histogram</a>, <a href="html/psahistprojpage.html">with projections</a> or <a href="html/psasurfacepage.html">surface</a> plot</p>
 	</ul>
 	<h2>DAQ Results</h2>
 	<p> <b>After</b> the data acquisition, open/download </p>
@@ -48,10 +48,10 @@ Shortcuts: <a href="cgi/cgitraces.cgi"> ADC traces </a>,
 		<li> <a href="psa2D.csv"> PSA histogram </a> as csv file</li>
 	</ul>
 	
-	<p> To view <b>very short</b> list mode data files (run type 0x501) as a table,  <a href="lmtablepage.html"> click here</a>. 
+	<p> To view <b>very short</b> list mode data files (run type 0x501) as a table,  <a href="html/lmtablepage.html"> click here</a>.
 	    (Large files take very long to format as table.)  </p>
-   <p>To view most recent ADC traces in a plot,  <a href="adcpage.html"> click here</a>.</p>
-	<p>To view most recent averaged ADC traces in a plot,  <a href="adcavgpage.html"> click here</a>.</p>
+   <p>To view most recent ADC traces in a plot,  <a href="html/adcpage.html"> click here</a>.</p>
+	<p>To view most recent averaged ADC traces in a plot,  <a href="html/adcavgpage.html"> click here</a>.</p>
 
    <p>To view LM waveforms from latest 0x500 DAQ,  <a href="cgi/cgiwaveforms.cgi?evno=0"> click here</a>.</p>
 
@@ -64,7 +64,7 @@ Shortcuts: <a href="cgi/cgitraces.cgi"> ADC traces </a>,
        <li> <a href="cgi/cgistats.cgi"> Run statistics </a> (full) </li>
 	 </ul></p>
 
-	 <p> For other web operations (login required), <a href="webops/webopsindex.html"> click here </a>
+	 <p> For other web operations (login required), <a href="html/webops.html"> click here </a>
 
 	<h2> Help </h2>
 	<p> View Pixie-Net <a href="doc/Pixie_Net_Manual.pdf"> manual </a>  </p>
