Fixing webops path

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <p> <h1> Pixie-Net Home Page</h1></p>
 Shortcuts: <a href="cgi/cgitraces.cgi"> ADC traces </a>,
            <a href="cgi/cgistats.cgi"> Run statistics </a>,
- 			  <a href="webops/webopsindex.html"> Web operations </a> ,
+ 			  <a href="html/webops.html"> Web operations </a> ,
 			  <a href="html/mcapage.html">MCA spectra</a>
 	 	   
 	<h2>DAQ Monitoring</h2>
