Updating all the hard coded paths to point to the right places

--- a/web/pages/adcpage.html
+++ b/web/pages/adcpage.html
@@ -24,7 +24,7 @@
 
 <body>
  <div class="box">            
-<img src="../assets/Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
+<img src="../images/Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
 <p> </p>
 <p> <h1> Pixie-Net ADC Traces </h1></p>
 
@@ -38,7 +38,7 @@
 
   var g2 = new Dygraph(
     document.getElementById("graphdiv2"),
-    "../ADC.csv", // path to CSV file
+    "../../ADC.csv", // path to CSV file
     {legend: 'always',
 	  title: ' ',
 	  ylabel: 'ADC value',
