--- a/web/pages/webops.html
+++ b/web/pages/webops.html
@@ -20,12 +20,12 @@
 
 <body>
 <div class="box">
-	<img src="../assets/Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
+	<img src="../images/Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
 <p> </p>
 <p> <h1> Pixie-Net Web Operations</h1></p>
 Shortcuts: <a href="../cgi/cgitraces.cgi"> ADC traces </a>,
            <a href="../cgi/cgistats.cgi"> Run statistics </a>,
-			  <a href="../index.html"> Home page </a>,
+			  <a href="../../index.html"> Home page </a>,
 			  <a href="mcapage.html">MCA spectra</a>
 
 
@@ -49,14 +49,14 @@ Shortcuts: <a href="../cgi/cgitraces.cgi"> ADC traces </a>,
 	<h2>DAQ Results</h2>
 	<p> <b>After</b> the data acquisition, <b>open/download</b> </p>
    <ul>
-   	<li> <a href="../LMdata.txt"> 0x500</a> List mode data with waveforms (from run type 0x500, text) </li>
-		<li> <a href="../LMdata.dat"> 0x501</a> List mode data without waveforms (from run type 0x501, csv) </li>
-		<li> <a href="../LMdata.dt2"> 0x502</a> List mode with PSA (from run type 0x502, csv)</li>
-		<li> <a href="../LMdata.dt3"> 0x503</a> List mode coincidence data (from run type 0x503, csv)</li>
-		<li> <a href="../LMdata.b00"> 0x400/402</a> Binary list mode data (from run types 0x400, 0x402)</li>
-	   <li> <a href="../MCA.csv"> MCA spectra </a> as csv file</li>
-	   <li> <a href="../RS.csv"> Run statistics </a> as csv file (full)</li>
-		<li> <a href="../psa2D.csv"> PSA histogram </a> as csv file</li>
+   	<li> <a href="../../LMdata.txt"> 0x500</a> List mode data with waveforms (from run type 0x500, text) </li>
+		<li> <a href="../../LMdata.dat"> 0x501</a> List mode data without waveforms (from run type 0x501, csv) </li>
+		<li> <a href="../../LMdata.dt2"> 0x502</a> List mode with PSA (from run type 0x502, csv)</li>
+		<li> <a href="../../LMdata.dt3"> 0x503</a> List mode coincidence data (from run type 0x503, csv)</li>
+		<li> <a href="../../LMdata.b00"> 0x400/402</a> Binary list mode data (from run types 0x400, 0x402)</li>
+	   <li> <a href="../../MCA.csv"> MCA spectra </a> as csv file</li>
+	   <li> <a href="../../RS.csv"> Run statistics </a> as csv file (full)</li>
+		<li> <a href="../../psa2D.csv"> PSA histogram </a> as csv file</li>
 	</ul>
 	
    <p>View most recent data<b> in plots and tables</b> </p>
