Adding new dashboard theme

--- a/assets/html/webops.html
+++ b/assets/html/webops.html
@@ -2,21 +2,22 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Pixie-Net Web Operations</title>
-<style type="text/css">
-	body { background-color:#d0d0d0; font-family:sans-serif; }
-	div.box { background-color:#ffffff; width:500px; margin:20px auto 50px; padding:50px; border-radius:10px; border:1px solid #808080; box-shadow:8px 15px 20px #404040 }
-	img.logo { float:right; margin:-10px 0 0 30px }
-	h1 { margin:0; font-size:24px }
-	h2 { margin-top:40px; font-size:20px; font-weight:normal; border-bottom:1px solid #ff9040 }
-	p { font-size:14px }
-	li { font-size:14px }
-	a { color:#6060d0; text-decoration:none }
-	a:hover { text-decoration:underline }
-</style>
-</head>
+	<title>Pixie-Net - DAQ</title>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
 
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+
+	<!--     Fonts and icons     -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
+
+	<!-- Material Kit CSS -->
+	<link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
+	<link href="assets/css/now-ui-dashboard.css" rel="stylesheet"/>
+	<link rel="shortcut icon" type="image/png" href="/assets/images/favicon.ico"/>
+</head>
 
 <body>
 <div class="box">
