--- a/assets/html/adcpage.html
+++ b/assets/html/adcpage.html
@@ -2,80 +2,155 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Pixie-Net ADC</title>
+    <title>Pixie-Net - ADC</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
 
-<script type="text/javascript"  src="../js/dygraph-combined.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-<style type="text/css">
-	body { background-color:#d0d0d0; font-family:sans-serif; }
-	div.box { background-color:#ffffff; width:500px; margin:20px auto 50px; padding:50px; border-radius:10px; border:1px solid #808080; box-shadow:8px 15px 20px #404040 }
-	img.logo { float:right; margin:-10px 0 0 30px }
-	h1 { margin:0; font-size:24px }
-	h2 { margin-top:40px; font-size:20px; font-weight:normal; border-bottom:1px solid #ff9040 }
-	p { font-size:14px }
-	a { color:#6060d0; text-decoration:none }
-	a:hover { text-decoration:underline }
-</style>
+    <!--     Fonts and icons     -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
 
-
+    <!-- Material Kit CSS -->
+    <link href="../css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../css/now-ui-dashboard.css" rel="stylesheet"/>
+    <link rel="shortcut icon" type="image/png" href="../images/favicon.ico"/>
+    <script type="text/javascript" src="../js/plugins/dygraph-combined.js"></script>
 </head>
 
-
 <body>
- <div class="box">            
-<img src="../images/Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
-<p> </p>
-<p> <h1> Pixie-Net ADC Traces </h1></p>
+<div class="wrapper">
+    <div class="sidebar" data-color="blue">
+        <!--
+            Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
+        -->
+        <div class="logo">
+            <a href="https://xia.com" class="simple-text logo-mini">
+                <img class="image" src="../images/cropped-xia-xray-gamma-ray-products-logo.jpg">
+            </a>
+            <a href="../../index.html" class="simple-text logo-normal">
+                Pixie-Net
+            </a>
+        </div>
+        <div class="sidebar-wrapper" id="sidebar-wrapper">
+            <ul class="nav">
+                <li>
+                    <a href="../cgi/cgitraces.cgi">
+                        <i class="now-ui-icons education_atom"></i>
+                        <p>ADC traces</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="../html/mcapage.html">
+                        <i class="now-ui-icons design_app"></i>
+                        <p>MCA spectra</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="../html/rspage.html">
+                        <i class="now-ui-icons ui-1_bell-53"></i>
+                        <p>Run Statistics</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="../html/psahistpage.html">
+                        <i class="now-ui-icons users_single-02"></i>
+                        <p>Pulse-Shape Analysis</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="../html/webops.html">
+                        <i class="now-ui-icons location_map-big"></i>
+                        <p>DAQ</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 
+    <div class="main-panel">
+        <div class="panel-header page-header-image">
+            <img src="../images/Xia_LLC_web_header.jpg"></a>
+        </div>
+        <h1>ADC Traces </h1>
 
+        <div class="content">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card card-chart">
+                        <div class="card-header">
+                            <h5 class="card-category">Global Sales</h5>
+                            <h4 class="card-title">Shipped Products</h4>
+                            <div class="dropdown">
+                                <button type="button"
+                                        class="btn btn-round btn-outline-default dropdown-toggle btn-simple btn-icon no-caret"
+                                        data-toggle="dropdown">
+                                    <i class="now-ui-icons loader_gear"></i>
+                                </button>
+                                <div class="dropdown-menu dropdown-menu-right">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <a class="dropdown-item" href="#">Something else here</a>
+                                    <a class="dropdown-item text-danger" href="#">Remove Data</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <div class="chart-area">
+                                <canvas id="graphdiv"></canvas>
+                                <script type="text/javascript">
+                                    Dygraph.Interaction.DEBUG = true;
 
+                                    var g2 = new Dygraph(
+                                        document.getElementById("graphdiv"),
+                                        "../../ADC.csv",
+                                        {
+                                            legend: 'always',
+                                            title: ' ',
+                                            ylabel: 'ADC value',
+                                            xlabel: 'Sample number'
+                                        }          // options
+                                    );
+                                    var graphs = [g2];
+                                    var scales = {x: false, y: false};
 
-<div id="graphdiv2"  style="width:500px; height:300px;"></div>
-<script type="text/javascript">
+                                    function setLogScale(axis, val) {
+                                        if (axis === 'y') {
+                                            for (var idx = 0; idx < graphs.length; idx++) {
+                                                graphs[idx].updateOptions({logscale: val});
+                                            }
+                                        } else {
+                                            for (var idx = 0; idx < graphs.length; idx++) {
+                                                graphs[idx].updateOptions({axes: {x: {logscale: val}}});
+                                            }
+                                        }
+                                        scales[axis] = val;
+                                        var text = "y: " + (scales.y ? "log" : "linear") + ", x: " + (scales.x ? "log" : "linear");
+                                        document.getElementById("description").innerText = text;
+                                    }
 
-  Dygraph.Interaction.DEBUG = true;
-
-  var g2 = new Dygraph(
-    document.getElementById("graphdiv2"),
-    "../../ADC.csv", // path to CSV file
-    {legend: 'always',
-	  title: ' ',
-	  ylabel: 'ADC value',
-	  xlabel: 'Sample number'}          // options
-  );
-      var graphs = [ g2 ];
-      var scales = { x : false, y : false };
-      function setLogScale(axis, val) {
-        if (axis === 'y') {
-          for (var idx = 0; idx < graphs.length; idx++) {
-            graphs[idx].updateOptions({ logscale: val });
-          }
-        } else {
-          for (var idx = 0; idx < graphs.length; idx++) {
-            graphs[idx].updateOptions({ axes : { x : {  logscale : val } } });
-          }
-        }
-        scales[axis] = val;
-        var text = "y: " + (scales.y ? "log" : "linear") + ", x: " + (scales.x ? "log" : "linear");
-        document.getElementById("description").innerText = text;
-      }
-
-      setLogScale('y', false);
-
-</script>
-
-
- </div>
-
-<p>Double click to auto zoom </p>
-<p>Click and drag to zoom </p>
-<p>Alt click and drag to pan </p>
-<p>Use browser button to refresh </p>
-<p>Roughly 200 nanoseconds between samples </p>
-
-
-
+                                    setLogScale('y', false);
+                                </script>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <div class="stats">
+                                <i class="now-ui-icons arrows-1_refresh-69"></i> Just Updated
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <p>Double click to auto zoom </p>
+    <p>Click and drag to zoom </p>
+    <p>Alt click and drag to pan </p>
+    <p>Use browser button to refresh </p>
+    <p>Roughly 200 nanoseconds between samples </p>
+</div>
 </body>
 </html>
 
