--- a/assets/html/adcpage.html
+++ b/assets/html/adcpage.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Pixie-Net - ADC</title>
     <!-- Required meta tags -->
@@ -19,7 +18,6 @@
     <link rel="shortcut icon" type="image/png" href="../images/favicon.ico"/>
     <script type="text/javascript" src="../js/plugins/dygraph-combined.js"></script>
 </head>
-
 <body>
 <div class="wrapper">
     <div class="sidebar" data-color="blue">
@@ -69,41 +67,22 @@
             </ul>
         </div>
     </div>
-
     <div class="main-panel">
-        <div class="panel-header page-header-image">
-            <img src="../images/Xia_LLC_web_header.jpg"></a>
+        <div class="panel-header">
+            <div class="header text-center">
+                <h2 class="title">ADC Traces</h2>
+            </div>
         </div>
-        <h1>ADC Traces </h1>
-
         <div class="content">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-10">
                     <div class="card card-chart">
-                        <div class="card-header">
-                            <h5 class="card-category">Global Sales</h5>
-                            <h4 class="card-title">Shipped Products</h4>
-                            <div class="dropdown">
-                                <button type="button"
-                                        class="btn btn-round btn-outline-default dropdown-toggle btn-simple btn-icon no-caret"
-                                        data-toggle="dropdown">
-                                    <i class="now-ui-icons loader_gear"></i>
-                                </button>
-                                <div class="dropdown-menu dropdown-menu-right">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Another action</a>
-                                    <a class="dropdown-item" href="#">Something else here</a>
-                                    <a class="dropdown-item text-danger" href="#">Remove Data</a>
-                                </div>
-                            </div>
-                        </div>
                         <div class="card-body">
-                            <div class="chart-area">
-                                <canvas id="graphdiv"></canvas>
+                            <div class="chart-area" id="graphdiv">
+                                <canvas></canvas>
                                 <script type="text/javascript">
                                     Dygraph.Interaction.DEBUG = true;
-
-                                    var g2 = new Dygraph(
+                                    let g2 = new Dygraph(
                                         document.getElementById("graphdiv"),
                                         "../../ADC.csv",
                                         {
@@ -113,48 +92,51 @@
                                             xlabel: 'Sample number'
                                         }          // options
                                     );
-                                    var graphs = [g2];
-                                    var scales = {x: false, y: false};
+                                    let graphs = [g2];
+                                    let scales = {x: false, y: false};
 
                                     function setLogScale(axis, val) {
                                         if (axis === 'y') {
-                                            for (var idx = 0; idx < graphs.length; idx++) {
-                                                graphs[idx].updateOptions({logscale: val});
+                                            for (let idx1 = 0; idx1 < graphs.length; idx1++) {
+                                                graphs[idx1].updateOptions({logscale: val});
                                             }
                                         } else {
-                                            for (var idx = 0; idx < graphs.length; idx++) {
+                                            for (let idx = 0; idx < graphs.length; idx++) {
                                                 graphs[idx].updateOptions({axes: {x: {logscale: val}}});
                                             }
                                         }
                                         scales[axis] = val;
-                                        var text = "y: " + (scales.y ? "log" : "linear") + ", x: " + (scales.x ? "log" : "linear");
-                                        document.getElementById("description").innerText = text;
                                     }
 
                                     setLogScale('y', false);
                                 </script>
                             </div>
                         </div>
+                        <p>Double click to auto zoom. Click and drag to zoom. Alt click and drag to pan. </p>
+                        <p>Roughly 200 nanoseconds between samples </p>
                         <div class="card-footer">
                             <div class="stats">
-                                <i class="now-ui-icons arrows-1_refresh-69"></i> Just Updated
+                                <i class="now-ui-icons arrows-1_refresh-69"></i> Refresh with F5
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <footer class="footer">
+            <div class="img-fluid">
+                <img src="../images/Xia_LLC_web_header.jpg">
+            </div>
+        </footer>
     </div>
-    <p>Double click to auto zoom </p>
-    <p>Click and drag to zoom </p>
-    <p>Alt click and drag to pan </p>
-    <p>Use browser button to refresh </p>
-    <p>Roughly 200 nanoseconds between samples </p>
 </div>
+<!--   Core JS Files   -->
+<script src="../js/core/jquery-3.4.1.min.js" type="text/javascript"></script>
+<script src="../js/core/popper.min.js" type="text/javascript"></script>
+<script src="../js/core/bootstrap.min.js" type="text/javascript"></script>
+<script src="../js/core/perfect-scrollbar.min.js" type="text/javascript"></script>
+
+<!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
+<script src="../js/theme/now-ui-dashboard.js" type="text/javascript"></script>
 </body>
 </html>
-
-
-
-
-
