Making graph larger.

--- a/assets/html/adcpage.html
+++ b/assets/html/adcpage.html
@@ -116,7 +116,7 @@
                         <p>Roughly 200 nanoseconds between samples </p>
                         <div class="card-footer">
                             <div class="stats">
-                                <i class="now-ui-icons arrows-1_refresh-69"></i> Refresh with F5
+                                <i class="now-ui-icons arrows-1_refresh-69"></i> Refresh with F5.
                             </div>
                         </div>
                     </div>
