Tweaking some paths

--- a/assets/html/adcpage.html
+++ b/assets/html/adcpage.html
@@ -21,9 +21,6 @@
 <body>
 <div class="wrapper">
     <div class="sidebar" data-color="blue">
-        <!--
-            Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
-        -->
         <div class="logo">
             <a href="https://xia.com" class="simple-text logo-mini">
                 <img class="image" src="../images/cropped-xia-xray-gamma-ray-products-logo.jpg">
@@ -35,7 +32,7 @@
         <div class="sidebar-wrapper" id="sidebar-wrapper">
             <ul class="nav">
                 <li>
-                    <a href="../cgi/cgitraces.cgi">
+                    <a href="../html/adcpage.html">
                         <i class="now-ui-icons education_atom"></i>
                         <p>ADC traces</p>
                     </a>
