--- a/assets/html/rspage.html
+++ b/assets/html/rspage.html
@@ -35,7 +35,7 @@
         <div class="sidebar-wrapper" id="sidebar-wrapper">
             <ul class="nav">
                 <li>
-                    <a href="../cgi/cgitraces.cgi">
+                    <a href="../html/adcpage.html">
                         <i class="now-ui-icons education_atom"></i>
                         <p>ADC traces</p>
                     </a>
