--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Material Kit CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="assets/css/now-ui-dashboard.css" rel="stylesheet"/>
-    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.ico"/>
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico"/>
 </head>
 
 <body>
@@ -55,7 +55,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="assets/html/webops.html">
+                    <a href="assets/html/daq.html">
                         <i class="now-ui-icons location_map-big"></i>
                         <p>DAQ</p>
                     </a>
