--- a/assets/html/daq.html
+++ b/assets/html/daq.html
@@ -6,7 +6,6 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
     <!--     Fonts and icons     -->
@@ -14,9 +13,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
 
     <!-- Material Kit CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="assets/css/now-ui-dashboard.css" rel="stylesheet"/>
-    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.ico"/>
+    <link href="../css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../css/now-ui-dashboard.css" rel="stylesheet"/>
+    <link rel="shortcut icon" type="image/png" href="../images/favicon.ico"/>
 </head>
 
 <body>
