Moving along with the daq page.

--- a/assets/html/daq.html
+++ b/assets/html/daq.html
@@ -67,27 +67,41 @@
     <div class="main-panel">
         <div class="panel-header">
             <div class="header text-center">
-                <h1 class="title">Pixie-Net Homepage</h1>
+                <h1 class="title">Pixie-Net Data Acquisition Control</h1>
             </div>
         </div>
         <div class="content">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="card">
-                        <div class="card-header">
-                            <div class="card-title">
-                                <h2>Welcome!!</h2>
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header">
+                                <div class="card-title">
+                                    <h2>Introduction</h2>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                This page allows users to access the cgi programs that collect data directly from the
+                                Pixie-Net. It's recommended that you <b>DO NOT</b> access these pages if you're running the
+                                acquisition from the command line. You run the risk of causing problems with the module.
                             </div>
                         </div>
-                        <div class="card-body">
-                            <p>If you're seeing this page, it means you've successfully setup your Pixie-Net. You can
-                                use these webpages to</p>
-                            <ul>
-                                <li>download data that you've collected,</li>
-                                <li>visualize data on disk,</li>
-                                <li>view run statistics,</li>
-                                <li>and perform some data acquisition functions.</li>
-                            </ul>
+                    </div>
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header">
+                                <div class="card-title">
+                                    <h2>Help!</h2>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                You can get help from various sources. Here's a short list.
+                                <ul>
+                                    <li><a href="doc/Pixie_Net_Manual.pdf"> Pixie-Net manual</a></li>
+                                    <li><a href="http://support.xia.com/default.asp?W772">XIA Support Page</a></li>
+                                    <li><a href="mailto:support@xia.com">Email</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
