--- a/assets/html/daq.html
+++ b/assets/html/daq.html
@@ -25,7 +25,7 @@
             <a href="https://xia.com" class="simple-text logo-mini">
                 <img class="image" src="../images/cropped-xia-xray-gamma-ray-products-logo.jpg">
             </a>
-            <a href="index.html" class="simple-text logo-normal">
+            <a href="../../index.html" class="simple-text logo-normal">
                 Pixie-Net
             </a>
         </div>
