Combining tracecgi and gettraces into gettraces.cgi.
This can still be run from the command line.

--- a/assets/html/daq.html
+++ b/assets/html/daq.html
@@ -32,9 +32,8 @@
         <div class="sidebar-wrapper" id="sidebar-wrapper">
             <ul class="nav">
                 <li>
-                    <a href="../html/adcpage.html">
-                        <i class="now-ui-icons education_atom"></i>
-                        <p>ADC traces</p>
+                    <a href="../cgi/gettraces.cgi?for_web">
+                        <i class="now-ui-icons media-2_sound-wave"></i> Live ADC traces
                     </a>
                 </li>
                 <li>
@@ -82,8 +81,9 @@
                             </div>
                             <div class="card-body">
                                 This page allows users to access the cgi programs that collect data directly from the
-                                Pixie-Net. It's recommended that you <b>DO NOT</b> access these pages if you're running the
-                                acquisition from the command line. You run the risk of causing problems with the module.
+                                Pixie-Net. It's recommended that you <b>DO NOT</b> access these pages if you're running
+                                the acquisition from the command line. You run the risk of causing problems with the
+                                module.
                             </div>
                         </div>
                     </div>
@@ -109,15 +109,16 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="card-title">
-                                <h2>Help!</h2>
+                                <h2>Utilities</h2>
                             </div>
                         </div>
                         <div class="card-body">
-                            You can get help from various sources. Here's a short list.
                             <ul>
-                                <li><a href="doc/Pixie_Net_Manual.pdf"> Pixie-Net manual</a></li>
-                                <li><a href="http://support.xia.com/default.asp?W772">XIA Support Page</a></li>
-                                <li><a href="mailto:support@xia.com">Email</a></li>
+                                <li>
+                                    <a href="../../bin/gettraces.cgi?for_web">
+                                        <i class="now-ui-icons media-2_sound-wave"></i> View Live ADC Traces
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
