--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="sidebar-wrapper" id="sidebar-wrapper">
             <ul class="nav">
                 <li>
-                    <a href="assets/html/adcpage.html">
+                    <a href="assets/html/gettraces.html">
                         <i class="now-ui-icons education_atom"></i>
                         <p>ADC traces</p>
                     </a>
