Updating runstats.c to combine with the cgi file.

--- a/assets/html/daq.html
+++ b/assets/html/daq.html
@@ -43,7 +43,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="../html/rspage.html">
+                    <a href="../cgi/runstats.cgi?for_web">
                         <i class="now-ui-icons ui-1_bell-53"></i>
                         <p>Run Statistics</p>
                     </a>
