Updating updating path to xialogo

--- a/assets/html/daq.html
+++ b/assets/html/daq.html
@@ -23,7 +23,7 @@
     <div class="sidebar" data-color="blue">
         <div class="logo">
             <a href="https://xia.com" class="simple-text logo-mini">
-                <img class="image" src="../images/cropped-xia-xray-gamma-ray-products-logo.jpg">
+                <img class="image" src="../images/xialogo.jpg">
             </a>
             <a href="../../index.html" class="simple-text logo-normal">
                 Pixie-Net
