Restructuring the project to make deployments and pathing easier.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
 
     <!-- Material Kit CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="assets/css/now-ui-dashboard.css" rel="stylesheet"/>
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico"/>
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="css/now-ui-dashboard.css" rel="stylesheet"/>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <div class="sidebar" data-color="blue">
         <div class="logo">
             <a href="https://xia.com" class="simple-text logo-mini">
-                <img class="image" src="assets/images/cropped-xia-xray-gamma-ray-products-logo.jpg">
+                <img class="image" src="images/xialogo.jpg" alt="XIA logo">
             </a>
             <a href="index.html" class="simple-text logo-normal">
                 Pixie-Net
@@ -31,31 +31,31 @@
         <div class="sidebar-wrapper" id="sidebar-wrapper">
             <ul class="nav">
                 <li>
-                    <a href="assets/html/gettraces.html">
+                    <a href="html/gettraces.html">
                         <i class="now-ui-icons education_atom"></i>
                         <p>ADC traces</p>
                     </a>
                 </li>
                 <li>
-                    <a href="assets/html/mcapage.html">
+                    <a href="html/mcapage.html">
                         <i class="now-ui-icons design_app"></i>
                         <p>MCA spectra</p>
                     </a>
                 </li>
                 <li>
-                    <a href="assets/html/rspage.html">
+                    <a href="html/rspage.html">
                         <i class="now-ui-icons ui-1_bell-53"></i>
                         <p>Run Statistics</p>
                     </a>
                 </li>
                 <li>
-                    <a href="assets/html/psahistpage.html">
+                    <a href="html/psahistpage.html">
                         <i class="now-ui-icons users_single-02"></i>
                         <p>Pulse-Shape Analysis</p>
                     </a>
                 </li>
                 <li>
-                    <a href="assets/html/daq.html">
+                    <a href="html/daq.html">
                         <i class="now-ui-icons location_map-big"></i>
                         <p>DAQ</p>
                     </a>
@@ -75,7 +75,7 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="card-title">
-                                <h2>Welcome!!</h2>
+                                <h2>Welcome!</h2>
                             </div>
                         </div>
                         <div class="card-body">
@@ -109,20 +109,15 @@
                 </div>
             </div>
         </div>
-        <footer class="footer">
-            <div class="img-fluid">
-                <img src="assets/images/Xia_LLC_web_header.jpg">
-            </div>
-        </footer>
     </div>
 </div>
 </body>
 <!--   Core JS Files   -->
-<script src="assets/js/core/jquery-3.4.1.min.js" type="text/javascript"></script>
-<script src="assets/js/core/popper.min.js" type="text/javascript"></script>
-<script src="assets/js/core/bootstrap.min.js" type="text/javascript"></script>
-<script src="assets/js/core/perfect-scrollbar.min.js" type="text/javascript"></script>
+<script src="js/core/jquery-3.4.1.min.js" type="text/javascript"></script>
+<script src="js/core/popper.min.js" type="text/javascript"></script>
+<script src="js/core/bootstrap.min.js" type="text/javascript"></script>
+<script src="js/core/perfect-scrollbar.min.js" type="text/javascript"></script>
 
 <!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
-<script src="assets/js/theme/now-ui-dashboard.js" type="text/javascript"></script>
+<script src="js/theme/now-ui-dashboard.js" type="text/javascript"></script>
 </html>
