Clarifying that the ADC Traces come from a file.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li>
                     <a href="html/gettraces.html">
                         <i class="now-ui-icons education_atom"></i>
-                        <p>ADC traces</p>
+                        <p>ADC traces (File)</p>
                     </a>
                 </li>
                 <li>
